--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.5",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
@@ -33,8 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://api.duyiedu.com",
-  "devDependencies": {
-    "typescript": "^3.5.3"
-  }
+  "proxy": "http://api.duyiedu.com"
 }
