--- a/package.json
+++ b/package.json
@@ -3,19 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "connected-react-router": "^6.5.2",
-    "history": "^4.9.0",
+    "animate.css": "^3.7.2",
+    "dva": "^2.4.1",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-transition-group": "^4.2.2",
     "redux": "^4.0.4",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.5",
-    "redux-thunk": "^2.3.0"
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +35,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://api.duyiedu.com"
+  "proxy": "http://api.duyiedu.com",
+  "devDependencies": {
+    "typescript": "^3.5.3"
+  }
 }
